2004-04-29 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b72

	* New: Added extra field for Alttext/title/onMouseover.

	* Change: Added optional paramter to getExtraFields in Album.php.
		  If set to false not all extra Fields are returned.

	* New: Added getAlttext to AlbumItem.php. 
	       This method return the value of the new extra field, the caption or "No Caption".

	* Change: Tweaked getThumbnailTag, getHighlightTag and getPhotoTag to work with alttext.

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b71

	* Change: Renamed get_GalleryPathes() to getGalleryPaths() 
	  to fix spelling and uniformity of naming

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b70

	* Change: Correct the identification of the movie.thumb path
	  (get_GalleryPathes() is called in init.php)

2004-04-28  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b69

	* gallery_remote2.php: when an album is set to not allow the user
	  to view full-sized pictures, but there is no resized picture,
	  do allow to view full-sized, because it's the same as resized.
	  This appears to be what the web UI does.

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b68

	* Change: More beatification in resize_photo.php

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b67

	* Change: Forgot some $GALLERY_BASEDIR. Now its complete free.

2004-04-28 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b66

	* Change: BIG Change. Gallery is now ~90% valid HTML 4.01.
		  This includes HTML Code tidying.

	* Change: Complete Remove of global $GALLERY_BASEDIR

	* Change: Replace of <?php echo getStyleSheetLink() ?>
		  into <?php common_header(); ?>

	* New: Added possibility add parameter to gallery_validation_link()

	* Fix: Correct Title in move_photo.php

	* Change: Beautified some pages. E.g. Photo Properties

2004-04-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b65

	* Change: popup_js, redux. Only quote the string if it contains