@@ -1,3 +1,10 @@
+2004-04-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b73
+
+	* Change: Remove unused function parameter from AlbimItem::getPhotoId()
+	  and Image::getId() - Thanks to Adventure for finding this
+
+	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&t=16143
+
 2004-04-29 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b72
 
 	* New: Added extra field for Alttext/title/onMouseover.
